# ur_ws

./: .gitignore
src/behavior_cloning/: CMakeLists.txt  bc_ur5_policy.pth  freedrive_logger.py  get_initial_pose.py  infer.py  model_cpp.py  package.xml  reprocess_dataset.py  run_logger.py  setup.py  train.py
src/behavior_cloning/action/: ExecutePlan.action  MoveToJoint.action
src/behavior_cloning/behavior_cloning/: infer_node.py  setup.py
src/behavior_cloning/launch/: infer.launch.py
src/behavior_cloning/models/: policy.py
src/behavior_cloning/src/: moveit_action_server.cpp
src/ur5_description/: CMakeLists.txt  package.xml
src/ur5_description/launch/: display.launch.py
src/ur5_description/meshes/: ur5_scoop.stl
src/ur5_description/urdf/: ur5_with_scoop.urdf  ur5_with_scoop.urdf.xacro
